# markdown-reader

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  flake.nix  sample.md
crates/mermaid-text/: CHANGELOG.md  Cargo.toml  README.md
crates/mermaid-text/examples/: visual.rs
crates/mermaid-text/src/: detect.rs  lib.rs  mindmap.rs  sequence.rs  types.rs
crates/mermaid-text/src/layout/: grid.rs  layered.rs  mod.rs  nudge.rs  router.rs  subgraph.rs  sugiyama.rs
crates/mermaid-text/src/layout/snapshots/: mermaid_text__layout__sugiyama__tests__cicd_parallel_styles_to_same_target_sugiyama.snap  mermaid_text__layout__sugiyama__tests__nested_subgraphs_td_sugiyama.snap  mermaid_text__layout__sugiyama__tests__supervisor_bidirectional_in_subgraph_sugiyama.snap
crates/mermaid-text/src/parser/: common.rs  er.rs  flowchart.rs  mindmap.rs  mod.rs  pie.rs  sequence.rs  state.rs
crates/mermaid-text/src/render/: architecture.rs  block_diagram.rs  er.rs  git_graph.rs  mindmap.rs  mod.rs  pie.rs  sequence.rs  unicode.rs  xy_chart.rs
crates/mermaid-text/tests/: snapshots.rs
crates/mermaid-text/tests/regression_corpus/snapshots/: er_grid_layout_8_entities.snap  er_grid_layout_8_entities.width80.snap  flowchart_app_db_architecture.snap  flowchart_app_db_architecture.width80.snap  flowchart_back_edge_td_cycle.snap  flowchart_back_edge_td_cycle.width80.snap  flowchart_basic_decision.snap  flowchart_basic_decision.width80.snap  flowchart_cicd_pipeline.snap  flowchart_cicd_pipeline.width80.snap  flowchart_crossing_edges.snap  flowchart_crossing_edges.width80.snap  flowchart_edge_crosses_subgraph.snap  flowchart_edge_crosses_subgraph.width80.snap  flowchart_edge_label_no_corner_adjacent.snap  flowchart_edge_label_no_corner_adjacent.width80.snap  flowchart_edge_styles.snap  flowchart_edge_styles.width80.snap  flowchart_inline_quoted_labels.snap  flowchart_inline_quoted_labels.width80.snap  flowchart_label_midpoint_lr.snap  flowchart_label_midpoint_lr.width80.snap  flowchart_md_tui_diagram.snap  flowchart_md_tui_diagram.width80.snap  flowchart_subgraphs_tb.snap  flowchart_subgraphs_tb.width80.snap  flowchart_supervisor_bidirectional.snap  flowchart_supervisor_bidirectional.width80.snap  state_anonymous_choice.snap  state_basic_machine.snap  (+16 more)
crates/mermaid-text/tests/snapshots/: crossings__crossings_dense_bipartite.snap  crossings__crossings_dense_fan_out.snap  crossings__crossings_dense_multiple_back_edges.snap  crossings__crossings_dense_td_crossing.snap  crossings__crossings_edge_crosses_subgraph_boundary.snap  crossings__crossings_nested_subgraphs_td.snap  crossings__crossings_supervisor_bidirectional_in_subgraph.snap  snapshots__all_edge_styles.snap  snapshots__all_edge_styles_inline_quoted_labels.snap  snapshots__all_node_shapes.snap  snapshots__architecture_beta_canonical_example.snap  snapshots__architecture_diagram_with_sugiyama_backend.snap  snapshots__ascii_mode.snap  snapshots__back_edge_avoids_diagram_interior_in_td_cycle.snap  snapshots__back_edge_lr.snap  snapshots__cicd_parallel_styles_to_same_target.snap  snapshots__classdef_and_class_directives.snap  snapshots__click_directive_state_diagram_osc8.snap  snapshots__cross_subgraph_edge_label_avoids_bottom_border.snap  snapshots__crossing_edges_with_cross_junction.snap  snapshots__cylinder_in_flow.snap  snapshots__diamond_with_branches.snap  snapshots__edge_crosses_subgraph_boundary.snap  snapshots__edge_label_does_not_abut_subgraph_right_wall.snap  snapshots__edge_label_not_adjacent_to_corner_glyph.snap  snapshots__edge_link_style.snap  snapshots__er_canonical_three_entities.snap  snapshots__er_diagram_grid_layout_8_entities.snap  snapshots__er_minimal_two_entities.snap  snapshots__er_non_identifying_renders_dashed_line.snap  snapshots__flowchart_label_midpoint_placement_lr.snap  snapshots__flowchart_md_tui_test_diagram.snap  snapshots__long_label_soft_wrapped.snap  snapshots__mindmap_canonical_example.snap  snapshots__multiline_label_br.snap  snapshots__nested_activations_stack_horizontally.snap  snapshots__nested_subgraphs_td.snap  snapshots__perpendicular_subgraph_direction.snap  snapshots__sequence_with_explicit_activation.snap  snapshots__sequence_with_inline_call_reply_activation.snap  (+21 more)
(+96 files in other folders)
