[package]
name = "markdown-tui-explorer"
version = "0.8.2"
edition = "2024"
description = "A terminal-based markdown file browser and viewer with search, syntax highlighting, and live reload"
license = "MIT"
repository = "https://github.com/leboiko/markdown-reader"
homepage = "https://github.com/leboiko/markdown-reader"
keywords = ["markdown", "tui", "terminal", "viewer", "ratatui"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[[bin]]
name = "markdown-reader"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
pulldown-cmark = "0.13"
ignore = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
notify-debouncer-mini = "0.7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
mermaid-rs-renderer = "0.2.1"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
resvg = "0.46"
unicode-width = "0.2"
base64 = "0.22"
