[workspace]
members = [".", "crates/mermaid-text"]

[package]
name = "markdown-tui-explorer"
version = "1.7.1"
edition = "2024"
description = "A terminal-based markdown file browser and viewer with search, syntax highlighting, and live reload"
license = "MIT"
repository = "https://github.com/leboiko/markdown-reader"
homepage = "https://github.com/leboiko/markdown-reader"
keywords = ["markdown", "tui", "terminal", "viewer", "ratatui"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
# Screenshots are referenced from README.md via absolute GitHub raw URLs,
# so crates.io fetches them at render time. Excluding them from the
# tarball keeps `cargo install` downloads lean.
exclude = ["docs/screenshots/*"]

[[bin]]
name = "markdown-reader"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
pulldown-cmark = "0.13"
ignore = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
notify-debouncer-mini = "0.7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
mermaid-rs-renderer = "0.2.1"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false }
resvg = "0.46"
unicode-width = "0.2"
base64 = "0.22"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
edtui = { version = "0.11.2", default-features = false }
tempfile = "3.27.0"
mermaid-text = { version = "0.3.4", path = "crates/mermaid-text" }
