[package]
name = "mermaid-text"
version = "0.1.0"
edition = "2024"
description = "Render Mermaid diagrams as Unicode box-drawing text — no browser, no image protocols, pure Rust"
license = "MIT"
repository = "https://github.com/leboiko/mermaid-text"
keywords = ["mermaid", "diagram", "terminal", "ascii", "unicode"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[dependencies]
unicode-width = "0.2"
